--- a/stock-analyzer-agent/pyproject.toml
+++ b/stock-analyzer-agent/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ddgs>=9.10.0",
     "duckduckgo-search>=8.1.1",
+    "fastapi[standard]>=0.128.0",
     "langchain>=1.2.7",
     "langchain-community>=0.4.1",
     "langchain-groq>=1.1.1",
